--- a/public/index.html
+++ b/public/index.html
@@ -4,4 +4,17 @@
 </head>
 <body>
     <p>Hello to node JS</p>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket=io();
+        socket.on('connect',()=>{
+            console.log("connected to server");
+            
+        });
+
+        socket.on('disconnect',()=>{
+            console.log('Disconnected from server');
+            
+        })
+    </script>
 </body>
