--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,5 @@
 <body>
     <p>Hello to node JS</p>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        var socket=io();
-        socket.on('connect',()=>{
-            console.log("connected to server");
-            
-        });
-
-        socket.on('disconnect',()=>{
-            console.log('Disconnected from server');
-            
-        })
-    </script>
+    <script src="/js/index.js"></script>
 </body>
