--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
 </head>
 <body>
     <p>Hello to node JS</p>
+    <ol id="message"></ol>
+    <form id='message-form'>
+        <input type="text" name='message' placeholder="Message"/>
+        <button type="submit">Send</button>
+    </form>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
 </body>
