--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <input type="text" name='message' placeholder="Message"/>
         <button type="submit">Send</button>
     </form>
+    <button id="sendLocation">Send Location</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
